organizing files + logIn

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<title>Terracotta Coffee</title>
 	<!-- links for reference -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="main.css"> 
-    <link rel="stylesheet" href="footer.css">
-    <link rel="icon" href="logo.png">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/main.css"> 
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="icon" href="images/logo.png">
 	
 </head>
 <body>
@@ -20,7 +20,7 @@
             <div class="header-container">
                 <div class="left-bar">
                     <div class="logo">
-                        <a href="index1.html"><img src="logo.png"></a>
+                        <a href="index1.html"><img src="images/logo.png"></a>
                     </div>
                     <nav>
                         <ul>
@@ -37,10 +37,10 @@
                     <span>Find a store</a></span>
                     </div>
                     <div class="sign-in">
-                        <a href="register.html">sign in</a>
+                        <a href="logIn.html">sign in</a>
                     </div>
                     <div class="join-now">
-                        <a href="login.html">join now</a>
+                        <a href="register.html">join now</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
         <div class="main-container">
             <section class="first section">
                 <div class="image">
-                    <img src="menu1.jpg">
+                    <img src="images/menu1.jpg">
                 </div>
                 <div class="text">
                     <h1>Win a thousand Leaves!</h1>
@@ -62,7 +62,7 @@
             </section>
             <section class="second section">
                 <div class="image">
-                    <img src="menu2.jpg">
+                    <img src="images/menu2.jpg">
                 </div>
                 <div class="text">
                     <h1>A new way to earn sips and plants</h1>
@@ -82,7 +82,7 @@
                     <div class="button"><a href=https://google.com>Buy Now</a></div>
                 </div>
                 <div class="image">
-                    <img src="menu3.jpg">
+                    <img src="images/menu3.jpg">
                 </div>
             </section>
 
