--- a/logIn.html
+++ b/logIn.html
@@ -18,7 +18,7 @@
             <div class="header-container">
                 <div class="left-bar">
                     <div class="logo">
-                        <a href="index1.html"><img src="images/logo.png"></a>
+                        <a href="index.html"><img src="images/logo.png"></a>
                     </div>
                 </div>
             </div>
