--- a/rewards.html
+++ b/rewards.html
@@ -48,5 +48,79 @@
             <th style="background-color: lightgray">Monthly Double - Leaves Days</th>
         </tr>
     </table>
+
+    		<!-- more information/footer -->
+            <footer>
+                <div class="footer-container">
+                    <div class="links-container">
+                        <ul>
+                            <li><b>About Us</b></li><br>
+                            <li>Our Company</li>
+                            <li>Our Coffee</li>
+                            <li>Stories and News</li>
+                            <li>Starbucks Archive</li>
+                            <li>Investor Relations</li>
+                            <li>customers Service</li>
+                        </ul>
+                    </div>
+                    <div class="links-container">
+                        <ul>
+                            <li><b>Careers</b></li><br>
+                            <li>Culture and Values</li>
+                            <li>Inclusion,Diversity, and Equity</li>
+                            <li>College Achievement Plan</li>
+                            <li>Alumini Community</li>
+                            <li>U.S. Careers</li>
+                            <li>International careers</li>
+                        </ul>
+                    </div>
+                    <div class="links-container">
+                        <ul>
+                            <li><b>Social Impact</b></li><br>
+                            <li>People</li>
+                            <li>Planet</li>
+                            <li>Environmental and Social Impact Reporting</li>
+                        </ul>
+                    </div>
+                    <div class="links-container">
+                        <ul>
+                            <li><b>For Business Partners</b></li><br>
+                            <li>Landlord Support Center</li>
+                            <li>Suppliers</li>
+                            <li>Corporate Gift Card Sales</li>
+                            <li>Office and Foodservice Coffee</li>
+                        </ul>
+                    </div>
+                    <div class="links-container">
+                        <ul>
+                            <li><b>Order and Pickup</b></li><br>
+                            <li>Order on the App</li>
+                            <li>Order on the Web</li>
+                            <li>Delivery</li>
+                            <li>Order and Pickup Options</li>
+                            <li>Explore and Find Coffee for Home</li>
+                        </ul>
+                    </div>
+                </div>
+            </footer>
+            
+            <!-- developer information -->
+            <section class="biodata">
+                <div class="bio">
+                    <div class="bio-icon">
+                        <div class="icon">
+                            <a href="https://github.com/amyxg"><i style="font-size:35px" class="fa">&#xf09b;</i>
+                        </div>
+                        <div class="icon">
+                            <a href="https://linkedin.com/in/amyxg"><i style="font-size:35px" class="fa">&#xf08c;</i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="bio-text">
+                    <div class="design">
+                        <span>TERRACOTTA COFFEE | DESIGNED BY | AMYXG</span>
+                    </div>
+                </div>
+            </section>
 </body>
 </html>
