--- a/rewards.html
+++ b/rewards.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Terracotta Coffee</title>
 	<!-- links for reference -->
+    <link rel="stylesheet" href="css/rewards.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="icon" href="images/logo.png">
 </head>
