--- a/logIn.html
+++ b/logIn.html
@@ -99,13 +99,13 @@
         <div class="bio">
             <div class="bio-icon">
                 <div class="icon">
-                    <a href="https://github.com/amyxg"><i style="font-size:35px" class="fa">&#xf09b;</i></a>
+                    <a href="https://github.com/amyxg" target="_blank"><i style="font-size:35px" class="fa">&#xf09b;</i></a>
 				</div>
 				<div class="icon">
-					<a href="https://linkedin.com/in/amyxg"><i style="font-size:35px" class="fa">&#xf08c;</i></a>
+					<a href="https://linkedin.com/in/amyxg" target="_blank"><i style="font-size:35px" class="fa">&#xf08c;</i></a>
 				</div>
                 <div class="icon">
-					<a href="mailto:amyxg.dev@gmail.com"><i style="font-size:35px" class="fa">&#xf0e0;</i></a>
+					<a href="mailto:amyxg.dev@gmail.com" target="_blank"><i style="font-size:35px" class="fa">&#xf0e0;</i></a>
 				</div>
             </div>
         </div>
