--- a/rewards.html
+++ b/rewards.html
@@ -19,35 +19,40 @@
     </div>
 
     <!--table for rewards description-->
-    <table>
-        <tr>
-            <th style="background-color: rgba(255, 166, 0, 0.438)">My Leaves Rewards <p>(before June 2023)</p></th>
-            <th>My Leaves Rewards <p>(July 2024 onwards)</p></th>
-        </tr>
-        <tr>
-            <td><span style="color: rgb(236, 134, 0)">1</span> <b>Leaves</b> per visit</td>
-            <td>2 <b>Leaves</b> per $1 spent</td>
-        </tr>
-        <tr>
-            <td><span style="color: rgb(236, 134, 0)">30</span> <b>Leaves</b> for Gold Level</td>
-            <td>300 <b>Leaves</b> for Gold Level</td>
-        </tr>
-        <tr>
-            <td>12 <b>Leaves</b> for a free reward (Gold)</td>
-            <td>125 <b>Leaves</b> for a free reward (Gold)</td>
-        </tr>
-        <tr>
-            <td style="background-color: lightgray">THREE LEVELS </td>
-            <td style="background-color: lightgray">TWO LEVELS </td>
-        </tr>
-        <tr>
-            <th>Welcome, Green, or Gold</th>
-            <th>Green or Gold</th>
-        </tr>
-        <tr>
-            <tr style="background-color: lightgray">&nbsp;</tr>
-            <th style="background-color: lightgray">Monthly Double - Leaves Days</th>
-        </tr>
+    <table class="table">
+        <caption>This is current as of 02/26/2024</caption>
+        <thead>
+            <tr>
+                <th>My Leaves Rewards <p>(before June 2023)</p></th>
+                <th>My Leaves Rewards <p>(July 2024 onwards)</p></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><span style="color: #ec8600">1</span> <b>Leaves</b> per visit</td>
+                <td>2 <b>Leaves</b> per $1 spent</td>
+            </tr>
+            <tr>
+                <td><span style="color: #ec8600">30</span> <b>Leaves</b> for Gold Level</td>
+                <td>300 <b>Leaves</b> for Gold Level</td>
+            </tr>
+            <tr>
+                <td>12 <b>Leaves</b> for a free reward (Gold)</td>
+                <td>125 <b>Leaves</b> for a free reward (Gold)</td>
+            </tr>
+            <tr>
+                <td style="background-color: lightgray">THREE LEVELS </td>
+                <td style="background-color: lightgray">TWO LEVELS </td>
+            </tr>
+            <tr>
+                <th>Welcome, Green, or Gold</th>
+                <th>Green or Gold</th>
+            </tr>
+            <tr>
+                <tr style="background-color: lightgray">&nbsp;</tr>
+                <th style="background-color: lightgray">Monthly Double - Leaves Days</th>
+            </tr>
+        </tbody>
     </table>
 
     		<!-- more information/footer -->
