--- a/rewards.html
+++ b/rewards.html
@@ -19,7 +19,7 @@
     </div>
 
     <!--table for rewards description-->
-    <table class="table">
+    <table>
         <caption>This is current as of 02/26/2024</caption>
         <thead>
             <tr>
