--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header-container">
                 <div class="left-bar">
                     <div class="logo">
-                        <a href="index1.html"><img src="images/logo.png"></a>
+                        <a href="index.html"><img src="images/logo.png"></a>
                     </div>
                     <nav>
                         <ul>
@@ -40,7 +40,7 @@
                         <a href="logIn.html">sign in</a>
                     </div>
                     <div class="join-now">
-                        <a href="register.html">join now</a>
+                        <a href="register.html" style="font: white">join now</a>
                     </div>
                 </div>
             </div>
@@ -52,17 +52,21 @@
         <div class="main-container">
             <section class="first section">
                 <div class="image">
-                    <img src="images/menu1.jpg">
+                    <img src="images/ad1.jpeg">
                 </div>
                 <div class="text">
-                    <h1>Win a thousand Leaves!</h1>
-                    <p>We’re giving away 1,000 Leaves to 1,000 Terracotta Coffee&reg; Rewards members in our Million Leaves Giveaway and much more all week!*</p>
-                    <div class="button"><a href="https://www.google.com/">play to win</a></div>
+                    <h1>Terracotta Coffee&reg;: Brewing Sustainability and Plant Love, One Cup at a Time!</h1>
+                    <ul>
+                        <li>Ethical Sourcing: Eco-friendly beans from sustainable farms support communities.</li>
+                        <li>Green Initiatives: Recyclable packaging, tree-planting projects, and sustainability education.</li>
+                        <li>Deliciously Eco-Friendly: Rich flavor with environmental dedication in every sip</li>
+                    </ul>
+					<div class="button"><a href="https://www.google.com/">More Information</a></div>
                 </div>
             </section>
             <section class="second section">
                 <div class="image">
-                    <img src="images/menu2.jpg">
+                    <img src="images/ad2.png">
                 </div>
                 <div class="text">
                     <h1>A new way to earn sips and plants</h1>
@@ -82,7 +86,7 @@
                     <div class="button"><a href=https://google.com>Buy Now</a></div>
                 </div>
                 <div class="image">
-                    <img src="images/menu3.jpg">
+                    <img src="images/ad3.png">
                 </div>
             </section>
 
@@ -98,7 +102,7 @@
                     <li>Our Company</li>
                     <li>Our Coffee</li>
                     <li>Stories and News</li>
-                    <li>Starbucks Archive</li>
+                    <li>Terracotta Coffee Archive</li>
                     <li>Investor Relations</li>
                     <li>customers Service</li>
                 </ul>
@@ -149,14 +153,14 @@
         <div class="bio">
             <div class="bio-icon">
                 <div class="icon">
-                    <a href="https://github.com/amyxg" target="_blank"><i style="font-size:35px" class="fa">&#xf09b;</i></a>
-				</div>
-				<div class="icon">
-					<a href="https://linkedin.com/in/amyxg" target="blank"><i style="font-size:35px" class="fa">&#xf08c;</i></a>
-				</div>
-                <div class="icon">
-					<a href="mailto:amyxg.dev@gmail.com" target="blank"><i style="font-size:35px" class="fa">&#xf0e0;</i></a>
-				</div>
+                            <a href="https://github.com/amyxg" target="_blank"><i style="font-size:35px" class="fa">&#xf09b;</i></a>
+                        </div>
+                        <div class="icon">
+                            <a href="https://linkedin.com/in/amyxg" target="_blank"><i style="font-size:35px" class="fa">&#xf08c;</i></a>
+                        </div>
+                        <div class="icon">
+                            <a href="mailto:amyxg.dev@gmail.com" target="_blank"><i style="font-size:35px" class="fa">&#xf0e0;</i></a>
+                </div>
             </div>
         </div>
         <div class="bio-text">
