--- a/logIn.html
+++ b/logIn.html
@@ -8,17 +8,38 @@
 	<!-- links for reference -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/logIn.css">
+	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="icon" href="images/logo.png">
 
 </head>
 <body>
-    <header>
+<header>
         <div class="header">
             <div class="header-container">
                 <div class="left-bar">
                     <div class="logo">
                         <a href="index.html"><img src="images/logo.png"></a>
+                    </div>
+                    <nav>
+                        <ul>
+                            <li><a href="menu.html">Menu</a></li>
+                            <li><a href="rewards.html">Rewards</a></li>
+                            <li><a href="giftcards.html">Gift Cards</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="right-bar">
+                    <div class="find-store">
+                        <a href="https://www.google.com/maps/about/mymaps">
+						<!-- <i style='font-size:24px' class='fas'>&#xf3c5;</i> -->
+                    <span>Find a store</a></span>
+                    </div>
+                    <div class="sign-in">
+                        <a href="logIn.html">sign in</a>
+                    </div>
+                    <div class="join-now">
+                        <a href="register.html" style="font: white">join now</a>
                     </div>
                 </div>
             </div>
@@ -48,7 +69,7 @@
                     <li>Our Company</li>
                     <li>Our Coffee</li>
                     <li>Stories and News</li>
-                    <li>Starbucks Archive</li>
+                    <li>Terracotta Coffee Archive</li>
                     <li>Investor Relations</li>
                     <li>customers Service</li>
                 </ul>
@@ -98,15 +119,16 @@
     <section class="biodata">
         <div class="bio">
             <div class="bio-icon">
+
                 <div class="icon">
-                    <a href="https://github.com/amyxg" target="_blank"><i style="font-size:35px" class="fa">&#xf09b;</i></a>
-				</div>
-				<div class="icon">
-					<a href="https://linkedin.com/in/amyxg" target="_blank"><i style="font-size:35px" class="fa">&#xf08c;</i></a>
-				</div>
-                <div class="icon">
-					<a href="mailto:amyxg.dev@gmail.com" target="_blank"><i style="font-size:35px" class="fa">&#xf0e0;</i></a>
-				</div>
+                            <a href="https://github.com/amyxg" target="_blank"><i style="font-size:35px" class="fa">&#xf09b;</i></a>
+                        </div>
+                        <div class="icon">
+                            <a href="https://linkedin.com/in/amyxg" target="_blank"><i style="font-size:35px" class="fa">&#xf08c;</i></a>
+                        </div>
+                        <div class="icon">
+                            <a href="mailto:amyxg.dev@gmail.com" target="_blank"><i style="font-size:35px" class="fa">&#xf0e0;</i></a>
+                </div>
             </div>
         </div>
         <div class="bio-text">
