--- a/rewards.html
+++ b/rewards.html
@@ -6,19 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Terracotta Coffee</title>
 	<!-- links for reference -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/rewards.css">
 	<link rel="stylesheet" href="css/footer.css">
+	<link rel="stylesheet" href="css/header.css">
 	<link rel="icon" href="images/logo.png">
 </head>
 <body>
-    <div class="logo">
-        <img src="images/logo.png">
-    </div>
-    <div class="tcRewards">
-        <img src ="images/tcRewards.PNG">
-    </div>
-
-    <!--table for rewards description-->
+<header>
+        <div class="header">
+            <div class="header-container">
+                <div class="left-bar">
+                    <div class="logo">
+                        <a href="index.html"><img src="images/logo.png"></a>
+                    </div>
+                    <nav>
+                        <ul>
+                            <li><a href="menu.html">Menu</a></li>
+                            <li><a href="rewards.html">Rewards</a></li>
+                            <li><a href="giftcards.html">Gift Cards</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="right-bar">
+                    <div class="find-store">
+                        <a href="https://www.google.com/maps/about/mymaps">
+						<!-- <i style='font-size:24px' class='fas'>&#xf3c5;</i> -->
+                    <span>Find a store</a></span>
+                    </div>
+                    <div class="sign-in">
+                        <a href="logIn.html">sign in</a>
+                    </div>
+                    <div class="join-now">
+                        <a href="register.html" style="font: white">join now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+	
+<main>
+	<div class="main-container">
+	<section class="first section">
+				<div class="tcRewards">
+					<img src ="images/tcRewards.PNG">
+				</div>
+				<!--table for rewards description-->
     <table>
         <caption>This is current as of 02/26/2024</caption>
         <thead>
@@ -29,16 +62,16 @@
         </thead>
         <tbody>
             <tr>
-                <td><span style="color: #ec8600">1</span> <b>Leaves</b> per visit</td>
-                <td>2 <b>Leaves</b> per $1 spent</td>
+                <td><b><span>1</span> Leaves</b> per visit</td>
+                <td><b><span>2</span> Leaves</b> per $1 spent</td>
             </tr>
             <tr>
-                <td><span style="color: #ec8600">30</span> <b>Leaves</b> for Gold Level</td>
-                <td>300 <b>Leaves</b> for Gold Level</td>
+                <td><b><span>30</span> Leaves</b> for Gold Level</td>
+                <td><b><span>300</span>  Leaves</b> for Gold Level</td>
             </tr>
             <tr>
-                <td>12 <b>Leaves</b> for a free reward (Gold)</td>
-                <td>125 <b>Leaves</b> for a free reward (Gold)</td>
+                <td><b><span>12</span> Leaves</b> for a free reward (Gold)</td>
+                <td><b><span>125</span> Leaves</b> for a free reward (Gold)</td>
             </tr>
             <tr>
                 <td style="background-color: lightgray">THREE LEVELS </td>
@@ -54,6 +87,9 @@
             </tr>
         </tbody>
     </table>
+    </section> 
+	</div>
+</main>
 
     		<!-- more information/footer -->
             <footer>
@@ -64,7 +100,7 @@
                             <li>Our Company</li>
                             <li>Our Coffee</li>
                             <li>Stories and News</li>
-                            <li>Starbucks Archive</li>
+                            <li>Terracotta Coffee Archive</li>
                             <li>Investor Relations</li>
                             <li>customers Service</li>
                         </ul>
@@ -132,4 +168,5 @@
                 </div>
             </section>
 </body>
-</html>
+</html></body>
+</html></html>
