--- a/logIn.html
+++ b/logIn.html
@@ -48,17 +48,25 @@
 	
     <h2>Sign in or create an account</h2>
     <div class="block">
+    <!--error message for users-->
+        <div id="login-error-msg-holder">
+            <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
         <div>
-        <label>Username</label>    
-        <input id="user" type="text"><br>
-        </div>
-        <div>
-        <label>Password</label>
-        <input id="password" type="password"><br>
-        </div>
-        <button id="logIn" onclick="logInUser()">Sign in</button>
+        
+        <form id="login-form">
+            <div>
+                <label>Username</label>    
+                <input id="username-field" type="text" name="username" class="login-form-field" placeholder="Username"><br>
+                </div>
+                <div>
+                <label>Password</label>
+                <input id="password-field" type="password" class="login-form-field" placeholder="Password"><br>
+                </div>  
+                      
+                <input type="submit" value="Sign In" id="login-form-submit">
+        </form>
+
     </div>
-    <script src="logIn.js"></script>
 	
 		<!-- more information/footer -->
     <footer>
