--- a/logIn.html
+++ b/logIn.html
@@ -11,10 +11,11 @@
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/footer.css">
 	<link rel="icon" href="images/logo.png">
+	<script src="logIn.js"></script>
 
 </head>
 <body>
-<header>
+	<header>
         <div class="header">
             <div class="header-container">
                 <div class="left-bar">
@@ -48,24 +49,13 @@
 	
     <h2>Sign in or create an account</h2>
     <div class="block">
-    <!--error message for users-->
-        <div id="login-error-msg-holder">
-            <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
-        <div>
-        
-        <form id="login-form">
-            <div>
-                <label>Username</label>    
-                <input id="username-field" type="text" name="username" class="login-form-field" placeholder="Username"><br>
-                </div>
-                <div>
-                <label>Password</label>
-                <input id="password-field" type="password" class="login-form-field" placeholder="Password"><br>
-                </div>  
-                      
-                <input type="submit" value="Sign In" id="login-form-submit">
-        </form>
-
+		<form id="form_id" method="post" name="myform">
+			<label>Username</label>
+			<input type="text" name="username" id="username"/>
+			<label>Password</label>
+			<input type="password" name="password" id="password"/>
+			<button id="logIn" onclick="validate()">Sign in</button>
+		</form>
     </div>
 	
 		<!-- more information/footer -->
