adding logged in user to homepage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/main.css"> 
     <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" href="images/logo.png">
+	<script src="logIn.js"></script>
 	
 </head>
 <body>
@@ -42,6 +43,7 @@
                     <div class="join-now">
                         <a href="register.html" style="font: white">join now</a>
                     </div>
+					<div id="userInfoBox" hidden="userInfo" class="logged-user">{$username}</div>
                 </div>
             </div>
         </div>
